Bug 347405 go button disconnected from URL bar. URL bar too tall (r+a=mconnor)

--- a/mozilla/browser/themes/pinstripe/browser/browser.css
+++ b/mozilla/browser/themes/pinstripe/browser/browser.css
@@ -848,7 +848,7 @@ toolbar[iconsize="small"] #paste-button:hover:active {
 /* ::::: nav-bar-inner ::::: */
 
 #urlbar {
-  margin: 5px 4px 5px 4px;
+  margin: 5px 0px 5px 4px;
   padding: 0px;
   font: icon !important;
 }
